Archive2/c6/317bc1d8c2942b/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int doItAll()’:
main.cpp:3:3: error: ‘screen’ was not declared in this scope
   screen->print( "Initialse" );
   ^
main.cpp:4:24: error: ‘Clss_CoreInit_Entry’ was not declared in this scope
   Clss_CoreInit_Entry( );
                        ^
main.cpp:7:3: error: ‘stringstream’ is not a member of ‘std’
   std::stringstream s;
   ^
main.cpp:7:21: error: expected ‘;’ before ‘s’
   std::stringstream s;
                     ^
main.cpp:22:3: error: ‘Clss_PreProcInfo’ was not declared in this scope
   Clss_PreProcInfo cppi;
   ^
main.cpp:22:20: error: expected ‘;’ before ‘cppi’
   Clss_PreProcInfo cppi;
                    ^
main.cpp:23:12: error: ‘cppi’ was not declared in this scope
   memset( &cppi, 0, sizeof ( cppi ) );
            ^
main.cpp:23:37: error: ‘memset’ was not declared in this scope
   memset( &cppi, 0, sizeof ( cppi ) );
                                     ^
main.cpp:28:52: error: ‘memcpy’ was not declared in this scope
   memcpy( cppi.aucReaderTTQ, "\xA0\x00\x00\x00", 4 );
                                                    ^
main.cpp:43:68: error: ‘PART_MATCH’ was not declared in this scope
     retval = Clss_AddAidList_Entry( ( unsigned char* )AID[ i ], 7, PART_MATCH, KERNTYPE_DEF );
                                                                    ^
main.cpp:43:80: error: ‘KERNTYPE_DEF’ was not declared in this scope
     retval = Clss_AddAidList_Entry( ( unsigned char* )AID[ i ], 7, PART_MATCH, KERNTYPE_DEF );
                                                                                ^
main.cpp:43:93: error: ‘Clss_AddAidList_Entry’ was not declared in this scope
     retval = Clss_AddAidList_Entry( ( unsigned char* )AID[ i ], 7, PART_MATCH, KERNTYPE_DEF );
                                                                                             ^
main.cpp:44:20: error: ‘EMV_OK’ was not declared in this scope
     if ( retval != EMV_OK )
                    ^
main.cpp:52:47: error: ‘Clss_SetPreProcInfo_Entry’ was not declared in this scope
     retval = Clss_SetPreProcInfo_Entry( &cppi );
                                               ^
main.cpp:53:20: error: ‘EMV_OK’ was not declared in this scope
     if ( retval != EMV_OK )
                    ^
main.cpp:62:3: error: ‘Clss_TransParam’ was not declared in this scope
   Clss_TransParam ctp;
   ^
main.cpp:62:19: error: expected ‘;’ before ‘ctp’
   Clss_TransParam ctp;
                   ^
main.cpp:63:11: error: ‘ctp’ was not declared in this scope
   memcpy( ctp.aucTransDate, "\x13\x10\x21\x00", 5 );
           ^
main.cpp:71:33: error: ‘Clss_PreTransProc_Entry’ was not declared in this scope
   Clss_PreTransProc_Entry( &ctp );
                                 ^
main.cpp:78:16: error: ‘OsPiccOpen’ was not declared in this scope
   OsPiccOpen(  );
                ^
main.cpp:81:27: error: ‘type’ was not declared in this scope
     retval = OsPiccPoll( &type, atq );
                           ^
main.cpp:81:33: error: ‘atq’ was not declared in this scope
     retval = OsPiccPoll( &type, atq );
                                 ^
main.cpp:81:37: error: ‘OsPiccPoll’ was not declared in this scope
     retval = OsPiccPoll( &type, atq );
                                     ^
main.cpp:87:27: error: ‘type’ was not declared in this scope
   retval = OsPiccAntiSel( type, UID, atq[ 0 ], SAK );
                           ^
main.cpp:87:38: error: ‘atq’ was not declared in this scope
   retval = OsPiccAntiSel( type, UID, atq[ 0 ], SAK );
                                      ^
main.cpp:87:52: error: ‘OsPiccAntiSel’ was not declared in this scope
   retval = OsPiccAntiSel( type, UID, atq[ 0 ], SAK );
                                                    ^
main.cpp:89:3: error: ‘s’ was not declared in this scope
   s.str( std::string( ) );
   ^
main.cpp:89:10: error: ‘string’ is not a member of ‘std’
   s.str( std::string( ) );
          ^
main.cpp:90:50: error: ‘ctlsReturnCodeToString’ was not declared in this scope
   s << "ACS: " << ctlsReturnCodeToString( retval );
                                                  ^
main.cpp:96:37: error: ‘OsPiccActive’ was not declared in this scope
   retval = OsPiccActive( type, rats );
                                     ^
main.cpp:98:10: error: ‘string’ is not a member of ‘std’
   s.str( std::string( ) );
          ^
main.cpp:105:36: error: ‘Clss_AppSlt_Entry’ was not declared in this scope
   retval = Clss_AppSlt_Entry( 0, 0 );
                                    ^
main.cpp:107:10: error: ‘string’ is not a member of ‘std’
   s.str( std::string( ) );
          ^
main.cpp:114:60: error: ‘Clss_FinalSelect_Entry’ was not declared in this scope
   retval = Clss_FinalSelect_Entry( &kernType, aid, &length );
                                                            ^
main.cpp:116:10: error: ‘string’ is not a member of ‘std’
   s.str( std::string( ) );
          ^
main.cpp:120:12: error: ‘GetKey’ was not declared in this scope
   GetKey(  );
            ^
main.cpp:121:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
